--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         and no other html but this is needed
     -->
     <canvas id="myCanvas"></canvas>
+    <script src="controls.js"></script>
     <script src="car.js"></script>
     <script src="main.js"></script>
 </body>
