--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         and no other html but this is needed
     -->
     <canvas id="myCanvas"></canvas>
+    <script src="sensor.js"></script>
     <script src="utils.js"></script>
     <script src="road.js"></script>
     <script src="controls.js"></script>
