--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         which the javascript will do things on,
         and no other html but this is needed
     -->
-    <canvas id="myCanvas"></canvas>
+    <canvas id="carCanvas"></canvas>
+    <canvas id="networkCanvas"></canvas>
+    <script src="visualizer.js"></script>
     <script src="network.js"></script>
     <script src="sensor.js"></script>
     <script src="utils.js"></script>
