--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         which the javascript will do things on,
         and no other html but this is needed
     -->
+    <div id="verticalButtons">
+        <button onclick="save()">Save</button>
+        <button onclick="discard()">Discard</button>
+    </div>
     <canvas id="carCanvas"></canvas>
     <canvas id="networkCanvas"></canvas>
     <script src="visualizer.js"></script>
