update UI information

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         and no other html but this is needed
     -->
     <div id="verticalButtons">
+        <div id="carsText"></div>
+        <div id="speedText"></div>
+        <div id="mutationText"></div>
         <button onclick="save()">Save</button>
         <button onclick="discard()">Discard</button>
     </div>
